// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a scale Setter component 1`] = `
<div
  class="scale-setter css-0"
  data-testid="scale-setter"
  data-theme="light"
>
  <div
    class="chakra-select__wrapper css-42b2qy"
    data-theme="light"
  >
    <select
      class="chakra-select css-161pkch"
      data-theme="light"
    >
      <option
        value=""
      >
        1 : 336,409
      </option>
      <option
        value="17471320"
      >
        1 : 
        17,471,320
      </option>
      <option
        value="8735660"
      >
        1 : 
        8,735,660
      </option>
      <option
        value="4367830"
      >
        1 : 
        4,367,830
      </option>
      <option
        value="2183915"
      >
        1 : 
        2,183,915
      </option>
      <option
        value="1091957"
      >
        1 : 
        1,091,957
      </option>
      <option
        value="545978"
      >
        1 : 
        545,978
      </option>
      <option
        value="272989"
      >
        1 : 
        272,989
      </option>
      <option
        value="136494"
      >
        1 : 
        136,494
      </option>
      <option
        value="68247"
      >
        1 : 
        68,247
      </option>
      <option
        value="34123"
      >
        1 : 
        34,123
      </option>
      <option
        value="17061"
      >
        1 : 
        17,061
      </option>
      <option
        value="8530"
      >
        1 : 
        8,530
      </option>
      <option
        value="4265"
      >
        1 : 
        4,265
      </option>
      <option
        value="2132"
      >
        1 : 
        2,132
      </option>
    </select>
    <div
      class="chakra-select__icon-wrapper css-iohxn1"
      data-theme="light"
    >
      <svg
        aria-hidden="true"
        class="chakra-select__icon"
        focusable="false"
        role="presentation"
        style="width: 1em; height: 1em; color: currentcolor;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`should successfully create a scale setter component with additional css classes and box properties 1`] = `
<div
  class="scale-setter test test1 test2 css-0"
  data-testid="scale-setter"
  data-theme="light"
>
  <div
    class="chakra-select__wrapper css-42b2qy"
    data-theme="light"
  >
    <select
      class="chakra-select css-161pkch"
      data-theme="light"
    >
      <option
        value=""
      >
        1 : 336,409
      </option>
      <option
        value="17471320"
      >
        1 : 
        17,471,320
      </option>
      <option
        value="8735660"
      >
        1 : 
        8,735,660
      </option>
      <option
        value="4367830"
      >
        1 : 
        4,367,830
      </option>
      <option
        value="2183915"
      >
        1 : 
        2,183,915
      </option>
      <option
        value="1091957"
      >
        1 : 
        1,091,957
      </option>
      <option
        value="545978"
      >
        1 : 
        545,978
      </option>
      <option
        value="272989"
      >
        1 : 
        272,989
      </option>
      <option
        value="136494"
      >
        1 : 
        136,494
      </option>
      <option
        value="68247"
      >
        1 : 
        68,247
      </option>
      <option
        value="34123"
      >
        1 : 
        34,123
      </option>
      <option
        value="17061"
      >
        1 : 
        17,061
      </option>
      <option
        value="8530"
      >
        1 : 
        8,530
      </option>
      <option
        value="4265"
      >
        1 : 
        4,265
      </option>
      <option
        value="2132"
      >
        1 : 
        2,132
      </option>
    </select>
    <div
      class="chakra-select__icon-wrapper css-iohxn1"
      data-theme="light"
    >
      <svg
        aria-hidden="true"
        class="chakra-select__icon"
        focusable="false"
        role="presentation"
        style="width: 1em; height: 1em; color: currentcolor;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
